# ai-news-aggregater

./: .env.example  .gitignore  ARCHITECTURE.md  CHANGES.md  DEVELOPMENT.md  Dockerfile  MIGRATION_GUIDE.md  Makefile  OPTIMIZATION_COMPLETE.md  OPTIMIZATION_SUMMARY.md  QUICK_REFERENCE.md  README.md  alembic.ini  docker-compose.yml  main.py  pyproject.toml  render.yaml  render.yml
ai_news_aggregater/: main.py  run_stack.py
ai_news_aggregater/api/: auth_routes.py  deps.py  main.py  routes.py  schemas.py  security.py
ai_news_aggregater/config/: settings.py
ai_news_aggregater/core/: __init__.py  pipeline.py
ai_news_aggregater/data/: __init__.py  default_sources.py
ai_news_aggregater/email/: sender.py
ai_news_aggregater/fetchers/: __init__.py  base.py  blog_fetcher.py  models.py  video_fetcher.py  web_fetcher.py
ai_news_aggregater/logging/: logger.py
ai_news_aggregater/models/: Base.py  __init__.py  news.py  source.py  user.py
ai_news_aggregater/processors/: ContentAnalyzer.py
ai_news_aggregater/scheduler/: tasks.py
ai_news_aggregater/services/: __init__.py  ingestion_source_service.py  migration_service.py  news_service.py
ai_news_aggregater/storage/: __init__.py  crud.py  db.py  repository.py
ai_news_aggregater/users/: manager.py
ai_news_aggregater/utils/: container.py  errors.py  utils.py  validators.py
alembic/: env.py
alembic/versions/: 4e3df588d7ac_initial.py
scripts/: migrate_db.py  run_aggregator.py  run_migrations.py  seed_data.py
tests/: test_auth_api.py  test_ingestion_sources.py  test_suite.py
(+1 files in other folders)
